syntax = "proto3";

package product.v1;

option go_package = "github.com/example/product-catalog-service/proto/product/v1;productv1";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
  rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
  rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);

  rpc GetProduct(GetProductRequest) returns (GetProductReply);
  rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  int64 base_price_numerator = 4;
  int64 base_price_denominator = 5;
}
message CreateProductReply { string product_id = 1; }

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
}
message UpdateProductReply {}

message ActivateProductRequest { string product_id = 1; }
message ActivateProductReply {}

message DeactivateProductRequest { string product_id = 1; }
message DeactivateProductReply {}

message ApplyDiscountRequest {
  string product_id = 1;
  string percent = 2;
  int64 start_date_unix = 3;
  int64 end_date_unix = 4;
}
message ApplyDiscountReply {}

message RemoveDiscountRequest { string product_id = 1; }
message RemoveDiscountReply {}

message GetProductRequest { string product_id = 1; }
message GetProductReply {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string status = 5;
  string base_price = 6;
  string effective_price = 7;
  Discount discount = 8;
}

message ListProductsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string category = 3;
}
message ListProductsReply {
  repeated Product products = 1;
  string next_page_token = 2;
}

message Product {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string status = 5;
  string base_price = 6;
  string effective_price = 7;
}

message Discount {
  string percent = 1;
  int64 start_date_unix = 2;
  int64 end_date_unix = 3;
}
